fix button icon overflow

--- a/src/webcomponents/button/css/_common.scss
+++ b/src/webcomponents/button/css/_common.scss
@@ -17,7 +17,8 @@ $button-sizes: small, medium, large;
 
     :host(.btn--#{$size}) ::slotted([slot=icon]) {
         --_icon-size: var(--md-button-icon-size-#{$size});
-        font-size: calc(var(--md-button-icon-size-#{$size}) * 1.57);
+        font-size: calc(var(--md-button-icon-size-#{$size}) * 1.5);
+        overflow: visible;
     }
 }
 
